@@ -1,4 +1,5 @@
 3.0.18.0 (open)
+ * If SizeEstimatesRecorder misses a 'onDropTable' notification, the size_estimates table will never be cleared for that table. (CASSANDRA-14905)
  * Fix cassandra-stress write hang with default options (CASSANDRA-14616)
  * Backport: Flush netty client messages immediately (not by default) (CASSANDRA-13651)
  * CommitLogReplayer.handleReplayError should print stack traces (CASSANDRA-14589)
